[package]
name = "vsp-router"
version = "1.0.0"
edition = "2021"
description = "Create virtual serial ports, connect them to physical serial ports, and create routes between them all."
authors = ["Rob Donnelly"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfdonnelly/vsp-router"
keywords = ["serial", "socat", "ttybus", "virtual", "router", "com0com", "hub4com"]
categories = ["command-line-utilities"]

[profile.release]
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "1"
bytes = "1"
camino = "1"
clap = { version = "4", features = ["derive"] }
color-print = "0.3"
futures = "0.3"
futures-util = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
snapbox = { version = "0.4.0", features = ["cmd"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin"
]
